--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,7 @@
     "babel-preset-react-app": "^3.1.1",
     "babel-runtime": "6.26.0",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
-    "chalk": "1.1.3",
+    "chalk": "^1.1.3",
     "css-loader": "0.28.7",
     "deep-extend": "^0.6.0",
     "dotenv": "4.0.0",
