--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ django-webpack-loader==0.6.0
 djangorestframework==3.8.2
 draftjs-exporter==2.1.2
 elasticsearch>=2.0.0,<3.0.0
+graphene-django>=2.2.0
 html5lib==1.0.1
 idna==2.7
 mysqlclient==1.3.13
