--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 aniso8601==3.0.2
+asn1crypto==0.24.0
 beautifulsoup4==4.6.0
 certifi==2018.8.24
+cffi==1.11.5
 chardet==3.0.4
+cryptography==2.4.1
 Django==2.0.8
 django-disqus==0.5
 django-filter==2.0.0
@@ -23,6 +26,8 @@ mysqlclient==1.3.13
 pbr==5.1.1
 Pillow==5.2.0
 promise==2.2.1
+pycparser==2.19
+PyMySQL==0.9.2
 pytz==2018.5
 requests==2.20.1
 Rx==1.6.1
