--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,6 +44,7 @@
     "react-dfp": "^0.7.5",
     "react-dom": "^16.5.2",
     "react-native-rss-parser": "^1.3.0",
+    "react-xml-parser": "^1.0.8",
     "resolve": "1.6.0",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
