staff list updates and the start of react-router integration

--- a/requirements.txt
+++ b/requirements.txt
@@ -9,9 +9,11 @@ Django==2.0.8
 django-disqus==0.5
 django-filter==2.0.0
 django-modelcluster==4.2
+django-react-templatetags==5.2.1
 django-taggit==0.23.0
 django-treebeard==4.3
 django-webpack-loader==0.6.0
+django-widget-tweaks==1.4.3
 djangorestframework==3.8.2
 draftjs-exporter==2.1.2
 elasticsearch==2.4.1
