--- a/frontend/package.json
+++ b/frontend/package.json
@@ -43,6 +43,7 @@
     "react-dev-utils": "^5.0.2",
     "react-dfp": "^0.7.5",
     "react-dom": "^16.5.2",
+    "react-iframe": "^1.3.3",
     "react-native-rss-parser": "^1.3.0",
     "react-router-dom": "^4.3.1",
     "react-xml-parser": "^1.0.8",
