--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,7 @@ django-treebeard==4.3
 django-webpack-loader==0.6.0
 django-widget-tweaks==1.4.3
 djangorestframework==3.8.2
-draftjs-exporter==2.1.2
+draftjs-exporter>=2.1.5
 elasticsearch==2.4.1
 graphene==2.1.3
 graphene-django==2.2.0
@@ -37,6 +37,6 @@ singledispatch==3.4.0.3
 six==1.11.0
 Unidecode==1.0.22
 urllib3==1.23
-wagtail>=2.3.0
+wagtail>=2.4.0
 webencodings==0.5.1
 Willow==1.1
