Implementation of Fetching API Data [Part 1] (#45)
* package json

* Minor changes to build process and page contents

* security updates

* frontend bug fixed

* idk

* small changes

* other small changes

* idk

* removed webpack index.js

* Work on the Home Page [Part 1]

* ignore

* a

* form fixes

* Tags API/backend support

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@ media-repo/
 .idea/*
 webpack-stats.dev.json
 bdh-env/
+bdh/media-root/
+*/__pycache__/*
+bdh/settings/__pycache__/*
 mynewenv/
 
 # Elastic Beanstalk Files
