--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "apollo-cache-inmemory": "^1.3.10",
     "apollo-client": "^2.4.6",
     "autoprefixer": "7.1.6",
+    "aws-sdk": "^2.402.0",
     "axios": "^0.18.0",
     "babel-core": "6.26.0",
     "babel-eslint": "7.2.3",
@@ -20,6 +21,7 @@
     "chalk": "^1.1.3",
     "css-loader": "0.28.7",
     "deep-extend": "^0.6.0",
+    "dns": "^0.2.2",
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
     "eslint": "4.10.0",
@@ -36,7 +38,10 @@
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
     "lodash": "^4.17.11",
+    "mysql2": "^1.6.5",
     "object-assign": "4.1.1",
+    "pg": "^7.8.0",
+    "pg-hstore": "^2.3.2",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
     "promise": "8.0.1",
@@ -46,12 +51,15 @@
     "react-dfp": "^0.7.5",
     "react-dom": "^16.5.2",
     "react-iframe": "^1.3.3",
+    "react-image-gallery": "^0.8.14",
     "react-router-dom": "^4.3.1",
     "react-xml-parser": "^1.0.8",
     "resolve": "1.6.0",
     "rss-parser": "^3.6.0",
+    "sqlite3": "^4.0.6",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
+    "tedious": "^5.0.3",
     "url-loader": "0.6.2",
     "webpack": "3.8.1",
     "webpack-dev-server": "2.9.4",
