--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "^1.1.3",
     "css-loader": "0.28.7",
+    "deep-equal": "^1.0.1",
     "deep-extend": "^0.6.0",
     "dns": "^0.2.2",
     "dotenv": "4.0.0",
