--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ certifi==2018.8.24
 cffi==1.11.5
 chardet==3.0.4
 cryptography==2.4.1
-Django>=2.1.6
+Django==2.1.7
 django-disqus==0.5
 django-filter==2.0.0
 django-modelcluster==4.2
@@ -15,8 +15,8 @@ django-treebeard==4.3
 django-webpack-loader==0.6.0
 django-widget-tweaks==1.4.3
 djangorestframework==3.8.2
-draftjs-exporter>=2.1.5
-elasticsearch==2.4.1
+draftjs-exporter==2.1.5
+elasticsearch==6.3.0
 graphene==2.1.3
 graphene-django==2.2.0
 graphql-core==2.1
@@ -25,6 +25,7 @@ html5lib==1.0.1
 idna==2.7
 mock==2.0.0
 mysqlclient==1.3.13
+numpy==1.17.0
 pbr==5.1.1
 Pillow==5.2.0
 promise==2.2.1
@@ -37,6 +38,6 @@ singledispatch==3.4.0.3
 six==1.11.0
 Unidecode==1.0.22
 urllib3==1.23
-wagtail>=2.4.0
+wagtail==2.4
 webencodings==0.5.1
 Willow==1.1
