--- a/frontend/package.json
+++ b/frontend/package.json
@@ -53,6 +53,7 @@
     "react-dom": "^16.5.2",
     "react-iframe": "^1.3.3",
     "react-image-gallery": "^0.8.14",
+    "react-mailchimp-subscribe": "^2.1.0",
     "react-router-dom": "^4.3.1",
     "react-xml-parser": "^1.0.8",
     "resolve": "1.6.0",
